add dom and some static data center elements on the page responsive layout

--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-<!-- Title -->
-<h1>Unsplash API - Infinite Scroll</h1>
-<!--Loader-->
-<div class="loader" id="loader" >
-    <img src="loader.svg" alt="Loading" >
-</div>
+    <!-- Title -->
+    <h1>Unsplash API - Infinite Scroll</h1>
+    <!--Loader-->
+    <div class="loader" id="loader" hidden>
+        <img src="loader.svg" alt="Loading" >
+    </div>
+<!--    Image Container-->
+    <div class="image-container" id="image-container">
+        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
+        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
+        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
+    </div>
+
+
 </body>
 </html>
