--- a/index.html
+++ b/index.html
@@ -12,15 +12,11 @@
     <!-- Title -->
     <h1>Unsplash API - Infinite Scroll</h1>
     <!--Loader-->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="Loading" >
     </div>
 <!--    Image Container-->
-    <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
-        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
-        <img src="https://images.unsplash.com/photo-1657287396171-daefeaac0e9c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80">
-    </div>
+    <div class="image-container" id="image-container"></div>
 
 
 </body>
